
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int pr_mflags; scalar_t__ pr_vaddr; } ;
typedef TYPE_1__ prmap_t ;
typedef int map ;
typedef int FILE ;


 int EXIT_FAILURE ;
 int MA_EXEC ;
 int MA_READ ;
 int MA_STACK ;
 int MA_WRITE ;
 int exit (int ) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 scalar_t__ fread (TYPE_1__*,int,int,int *) ;
 int perror (char*) ;

void *find_rwxmem(void){
    FILE *fp;
    prmap_t map;
    int flags;
    void *addr;

    if((fp=fopen("/proc/self/map","rb"))==((void*)0)){
        perror("fopen");
        exit(EXIT_FAILURE);
    }

    while(fread(&map,sizeof(map),1,fp)){
        flags=map.pr_mflags;

        if((flags&(MA_READ|MA_WRITE|MA_EXEC))==(MA_READ|MA_WRITE|MA_EXEC)){
            if(flags&MA_STACK) continue;
            addr=(void *)map.pr_vaddr;
        }
    }

    fclose(fp);

    return addr;
}
